<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="4"
    android:layout_gravity="start">

    <Button
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/sub_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/mul_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_weight="1"/>
    <Button
        android:id="@+id/div_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divison"
        android:layout_marginLeft="@dimen/dimen_5"
        android:layout_marginRight="@dimen/dimen_5"
        android:layout_weight="1"/>

</LinearLayout>