<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/text_size_22"
        android:background="@color/colorSpringGreen"
        android:padding="@dimen/dimen_5"
        android:text="@string/title_app"/>

    <TextView
        android:id="@+id/tvNumberA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:layout_marginBottom="@dimen/dimen_5"
        android:text="@string/number_a"/>
    <TextView
        android:id="@+id/tvNumberB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10"
        android:text="@string/number_b"/>

    <include layout="@layout/operator_layout"/>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5"
        android:background="@color/colorSpringGreen">
        <TextView
            android:id="@+id/tv_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:padding="@dimen/dimen_10"
            android:text="@string/result"
            android:maxLines="1"/>
    </HorizontalScrollView>

    <Button
        android:id="@+id/send_resutl_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/result"/>
</LinearLayout>